src/photo.h

    // see : https://docs.opencv.org/master/d7/db6/classcv_1_1AlignMTB.html
    typedef cv::Ptr<cv::AlignMTB> *AlignMTB;
typedef void *AlignMTB;
    void ColorChange(Mat src, Mat mask, Mat dst, float red_mul, float green_mul, float blue_mul);
    void FastNlMeansDenoisingColoredMulti(struct Mats src, Mat dst, int imgToDenoiseIndex, int temporalWindowSize);
    void FastNlMeansDenoisingColoredMultiWithParams(struct Mats src, Mat dst, int imgToDenoiseIndex, int temporalWindowSize, float h, float hColor, int templateWindowSize, int searchWindowSize);
    void FastNlMeansDenoising(Mat src, Mat dst);
    void FastNlMeansDenoisingColored(Mat src, Mat dst);
    AlignMTB AlignMTB_Create();
    AlignMTB AlignMTB_CreateWithParams(int max_bits, int exclude_range, bool cut);
    void AlignMTB_Process(AlignMTB b, struct Mats src, struct Mats *dst);
    void AlignMTB_Close(AlignMTB b);
    void DetailEnhance(Mat src, Mat dst, float sigma_s, float sigma_r);
    void EdgePreservingFilter(Mat src, Mat dst, int filter, float sigma_s, float sigma_r);