packages/dartcv/lib/src/g/photo.g.dart

// coverage:ignore-file
// opencv_dart - OpenCV bindings for Dart language
//    some c wrappers were from gocv: https://github.com/hybridgroup/gocv
//    License: Apache-2.0 https://github.com/hybridgroup/gocv/blob/release/LICENSE.txt
// Author: Rainyl
// License: Apache-2.0
// Date: 2024/01/28

// AUTO GENERATED FILE, DO NOT EDIT.
//
// Generated by `package:ffigen`.
// ignore_for_file: type=lint
import 'dart:ffi' as ffi;
import 'package:dartcv/src/g/types.g.dart' as imp1;

/// Native bindings for OpenCV - Photo
///
class CvNativePhoto {
  /// Holds the symbol lookup function.
  final ffi.Pointer<T> Function<T extends ffi.NativeType>(String symbolName)
      _lookup;

  /// The symbols are looked up in [dynamicLibrary].
  CvNativePhoto(ffi.DynamicLibrary dynamicLibrary)
      : _lookup = dynamicLibrary.lookup;

  /// The symbols are looked up with [lookup].
  CvNativePhoto.fromLookup(
      ffi.Pointer<T> Function<T extends ffi.NativeType>(String symbolName)
          lookup)
      : _lookup = lookup;

  void AlignMTB_Close(
    AlignMTBPtr b,
  ) {
    return _AlignMTB_Close(
      b,
    );
  }

  late final _AlignMTB_ClosePtr =
      _lookup<ffi.NativeFunction<ffi.Void Function(AlignMTBPtr)>>(
          'AlignMTB_Close');
  late final _AlignMTB_Close =
      _AlignMTB_ClosePtr.asFunction<void Function(AlignMTBPtr)>();

  ffi.Pointer<CvStatus> AlignMTB_Create(
    ffi.Pointer<AlignMTB> rval,
  ) {
    return _AlignMTB_Create(
      rval,
    );
  }

  late final _AlignMTB_CreatePtr = _lookup<
      ffi.NativeFunction<
          ffi.Pointer<CvStatus> Function(
              ffi.Pointer<AlignMTB>)>>('AlignMTB_Create');
  late final _AlignMTB_Create = _AlignMTB_CreatePtr.asFunction<
      ffi.Pointer<CvStatus> Function(ffi.Pointer<AlignMTB>)>();

  ffi.Pointer<CvStatus> AlignMTB_CreateWithParams(
    int max_bits,
    int exclude_range,
    bool cut,
    ffi.Pointer<AlignMTB> rval,
  ) {
    return _AlignMTB_CreateWithParams(
      max_bits,
      exclude_range,
      cut,
      rval,
    );
  }

  late final _AlignMTB_CreateWithParamsPtr = _lookup<
      ffi.NativeFunction<
          ffi.Pointer<CvStatus> Function(ffi.Int, ffi.Int, ffi.Bool,
              ffi.Pointer<AlignMTB>)>>('AlignMTB_CreateWithParams');
  late final _AlignMTB_CreateWithParams =
      _AlignMTB_CreateWithParamsPtr.asFunction<
          ffi.Pointer<CvStatus> Function(
              int, int, bool, ffi.Pointer<AlignMTB>)>();

  ffi.Pointer<CvStatus> AlignMTB_CreateWithParams_Async(
    int max_bits,
    int exclude_range,
    bool cut,
    imp1.CvCallback_1 callback,
  ) {
    return _AlignMTB_CreateWithParams_Async(
      max_bits,
      exclude_range,
      cut,
      callback,
    );
  }

  late final _AlignMTB_CreateWithParams_AsyncPtr = _lookup<
      ffi.NativeFunction<
          ffi.Pointer<CvStatus> Function(ffi.Int, ffi.Int, ffi.Bool,
              imp1.CvCallback_1)>>('AlignMTB_CreateWithParams_Async');
  late final _AlignMTB_CreateWithParams_Async =
      _AlignMTB_CreateWithParams_AsyncPtr.asFunction<
          ffi.Pointer<CvStatus> Function(int, int, bool, imp1.CvCallback_1)>();

  ffi.Pointer<CvStatus> AlignMTB_Create_Async(
    imp1.CvCallback_1 callback,
  ) {
    return _AlignMTB_Create_Async(
      callback,
    );
  }

  late final _AlignMTB_Create_AsyncPtr = _lookup<
          ffi
          .NativeFunction<ffi.Pointer<CvStatus> Function(imp1.CvCallback_1)>>(
      'AlignMTB_Create_Async');
  late final _AlignMTB_Create_Async = _AlignMTB_Create_AsyncPtr.asFunction<
      ffi.Pointer<CvStatus> Function(imp1.CvCallback_1)>();

  ffi.Pointer<CvStatus> AlignMTB_Process(
    AlignMTB b,
    VecMat src,
    ffi.Pointer<VecMat> dst,
  ) {
    return _AlignMTB_Process(
      b,
      src,
      dst,
    );
  }

  late final _AlignMTB_ProcessPtr = _lookup<
      ffi.NativeFunction<
          ffi.Pointer<CvStatus> Function(
              AlignMTB, VecMat, ffi.Pointer<VecMat>)>>('AlignMTB_Process');
  late final _AlignMTB_Process = _AlignMTB_ProcessPtr.asFunction<
      ffi.Pointer<CvStatus> Function(AlignMTB, VecMat, ffi.Pointer<VecMat>)>();

  ffi.Pointer<CvStatus> AlignMTB_Process_Async(
    AlignMTB b,
    VecMat src,
    imp1.CvCallback_1 callback,
  ) {
    return _AlignMTB_Process_Async(
      b,
      src,
      callback,
    );
  }

  late final _AlignMTB_Process_AsyncPtr = _lookup<
      ffi.NativeFunction<
          ffi.Pointer<CvStatus> Function(
              AlignMTB, VecMat, imp1.CvCallback_1)>>('AlignMTB_Process_Async');
  late final _AlignMTB_Process_Async = _AlignMTB_Process_AsyncPtr.asFunction<
      ffi.Pointer<CvStatus> Function(AlignMTB, VecMat, imp1.CvCallback_1)>();

  ffi.Pointer<CvStatus> ColorChange(
    Mat src,
    Mat mask,
    Mat dst,
    double red_mul,
    double green_mul,
    double blue_mul,
  ) {
    return _ColorChange(
      src,
      mask,
      dst,
      red_mul,
      green_mul,
      blue_mul,
    );
  }

  late final _ColorChangePtr = _lookup<
      ffi.NativeFunction<
          ffi.Pointer<CvStatus> Function(
              Mat, Mat, Mat, ffi.Float, ffi.Float, ffi.Float)>>('ColorChange');
  late final _ColorChange = _ColorChangePtr.asFunction<
      ffi.Pointer<CvStatus> Function(Mat, Mat, Mat, double, double, double)>();

  ffi.Pointer<CvStatus> ColorChange_Async(
    Mat src,
    Mat mask,
    double red_mul,
    double green_mul,
    double blue_mul,
    imp1.CvCallback_1 callback,
  ) {
    return _ColorChange_Async(
      src,
      mask,
      red_mul,
      green_mul,
      blue_mul,
      callback,
    );
  }

  late final _ColorChange_AsyncPtr = _lookup<
      ffi.NativeFunction<
          ffi.Pointer<CvStatus> Function(Mat, Mat, ffi.Float, ffi.Float,
              ffi.Float, imp1.CvCallback_1)>>('ColorChange_Async');
  late final _ColorChange_Async = _ColorChange_AsyncPtr.asFunction<
      ffi.Pointer<CvStatus> Function(
          Mat, Mat, double, double, double, imp1.CvCallback_1)>();

  ffi.Pointer<CvStatus> DetailEnhance(
    Mat src,
    Mat dst,
    double sigma_s,
    double sigma_r,
  ) {
    return _DetailEnhance(
      src,
      dst,
      sigma_s,
      sigma_r,
    );
  }

  late final _DetailEnhancePtr = _lookup<
      ffi.NativeFunction<
          ffi.Pointer<CvStatus> Function(
              Mat, Mat, ffi.Float, ffi.Float)>>('DetailEnhance');
  late final _DetailEnhance = _DetailEnhancePtr.asFunction<
      ffi.Pointer<CvStatus> Function(Mat, Mat, double, double)>();

  ffi.Pointer<CvStatus> DetailEnhance_Async(
    Mat src,
    double sigma_s,
    double sigma_r,
    imp1.CvCallback_1 callback,
  ) {
    return _DetailEnhance_Async(
      src,
      sigma_s,
      sigma_r,
      callback,
    );
  }

  late final _DetailEnhance_AsyncPtr = _lookup<
      ffi.NativeFunction<
          ffi.Pointer<CvStatus> Function(Mat, ffi.Float, ffi.Float,
              imp1.CvCallback_1)>>('DetailEnhance_Async');
  late final _DetailEnhance_Async = _DetailEnhance_AsyncPtr.asFunction<
      ffi.Pointer<CvStatus> Function(Mat, double, double, imp1.CvCallback_1)>();

  ffi.Pointer<CvStatus> EdgePreservingFilter(
    Mat src,
    Mat dst,
    int filter,
    double sigma_s,
    double sigma_r,
  ) {
    return _EdgePreservingFilter(
      src,
      dst,
      filter,
      sigma_s,
      sigma_r,
    );
  }

  late final _EdgePreservingFilterPtr = _lookup<
      ffi.NativeFunction<
          ffi.Pointer<CvStatus> Function(Mat, Mat, ffi.Int, ffi.Float,
              ffi.Float)>>('EdgePreservingFilter');
  late final _EdgePreservingFilter = _EdgePreservingFilterPtr.asFunction<
      ffi.Pointer<CvStatus> Function(Mat, Mat, int, double, double)>();

  ffi.Pointer<CvStatus> EdgePreservingFilter_Async(
    Mat src,
    int filter,
    double sigma_s,
    double sigma_r,
    imp1.CvCallback_1 callback,
  ) {
    return _EdgePreservingFilter_Async(
      src,
      filter,
      sigma_s,
      sigma_r,
      callback,
    );
  }

  late final _EdgePreservingFilter_AsyncPtr = _lookup<
      ffi.NativeFunction<
          ffi.Pointer<CvStatus> Function(Mat, ffi.Int, ffi.Float, ffi.Float,
              imp1.CvCallback_1)>>('EdgePreservingFilter_Async');
  late final _EdgePreservingFilter_Async =
      _EdgePreservingFilter_AsyncPtr.asFunction<
          ffi.Pointer<CvStatus> Function(
              Mat, int, double, double, imp1.CvCallback_1)>();

  ffi.Pointer<CvStatus> FastNlMeansDenoising(
    Mat src,
    Mat dst,
  ) {
    return _FastNlMeansDenoising(
      src,
      dst,
    );
  }

  late final _FastNlMeansDenoisingPtr =
      _lookup<ffi.NativeFunction<ffi.Pointer<CvStatus> Function(Mat, Mat)>>(
          'FastNlMeansDenoising');
  late final _FastNlMeansDenoising = _FastNlMeansDenoisingPtr.asFunction<
      ffi.Pointer<CvStatus> Function(Mat, Mat)>();

  ffi.Pointer<CvStatus> FastNlMeansDenoisingColored(
    Mat src,
    Mat dst,
  ) {
    return _FastNlMeansDenoisingColored(
      src,
      dst,
    );
  }

  late final _FastNlMeansDenoisingColoredPtr =
      _lookup<ffi.NativeFunction<ffi.Pointer<CvStatus> Function(Mat, Mat)>>(
          'FastNlMeansDenoisingColored');
  late final _FastNlMeansDenoisingColored = _FastNlMeansDenoisingColoredPtr
      .asFunction<ffi.Pointer<CvStatus> Function(Mat, Mat)>();

  ffi.Pointer<CvStatus> FastNlMeansDenoisingColoredMulti(
    VecMat src,
    Mat dst,
    int imgToDenoiseIndex,
    int temporalWindowSize,
  ) {
    return _FastNlMeansDenoisingColoredMulti(
      src,
      dst,
      imgToDenoiseIndex,
      temporalWindowSize,
    );
  }

  late final _FastNlMeansDenoisingColoredMultiPtr = _lookup<
      ffi.NativeFunction<
          ffi.Pointer<CvStatus> Function(VecMat, Mat, ffi.Int,
              ffi.Int)>>('FastNlMeansDenoisingColoredMulti');
  late final _FastNlMeansDenoisingColoredMulti =
      _FastNlMeansDenoisingColoredMultiPtr.asFunction<
          ffi.Pointer<CvStatus> Function(VecMat, Mat, int, int)>();

  ffi.Pointer<CvStatus> FastNlMeansDenoisingColoredMultiWithParams(
    VecMat src,
    Mat dst,
    int imgToDenoiseIndex,
    int temporalWindowSize,
    double h,
    double hColor,
    int templateWindowSize,
    int searchWindowSize,
  ) {
    return _FastNlMeansDenoisingColoredMultiWithParams(
      src,
      dst,
      imgToDenoiseIndex,
      temporalWindowSize,
      h,
      hColor,
      templateWindowSize,
      searchWindowSize,
    );
  }

  late final _FastNlMeansDenoisingColoredMultiWithParamsPtr = _lookup<
      ffi.NativeFunction<
          ffi.Pointer<CvStatus> Function(
              VecMat,
              Mat,
              ffi.Int,
              ffi.Int,
              ffi.Float,
              ffi.Float,
              ffi.Int,
              ffi.Int)>>('FastNlMeansDenoisingColoredMultiWithParams');
  late final _FastNlMeansDenoisingColoredMultiWithParams =
      _FastNlMeansDenoisingColoredMultiWithParamsPtr.asFunction<
          ffi.Pointer<CvStatus> Function(
              VecMat, Mat, int, int, double, double, int, int)>();

  ffi.Pointer<CvStatus> FastNlMeansDenoisingColoredMultiWithParams_Async(
    VecMat src,
    int imgToDenoiseIndex,
    int temporalWindowSize,
    double h,
    double hColor,
    int templateWindowSize,
    int searchWindowSize,
    imp1.CvCallback_1 callback,
  ) {
    return _FastNlMeansDenoisingColoredMultiWithParams_Async(
      src,
      imgToDenoiseIndex,
      temporalWindowSize,
      h,
      hColor,
      templateWindowSize,
      searchWindowSize,
      callback,
    );
  }
